--- a/README.Rmd
+++ b/README.Rmd
@@ -1,17 +1,28 @@
+---
+output: github_document
+---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
+
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  fig.path = "man/figures/README-",
+  out.width = "100%"
+)
+```
 
 # smeltr <img src="man/figures/logo.jpg" align="right" height="57" alt="" />
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of smeltr is to …
+The goal of smeltr is to ...
 
 ## Installation
 
-You can install the development version of smeltr from
-[GitHub](https://github.com/) with:
+You can install the development version of smeltr from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
@@ -22,9 +33,10 @@ devtools::install_github("higherX4Racine/smeltr")
 
 This is a basic example which shows you how to solve a common problem:
 
-``` r
+```{r}
+#| label: example
 library(smeltr)
 ## basic example code
 dummy()
-#> dummy
 ```
+
