--- a/README.Rmd
+++ b/README.Rmd
@@ -13,12 +13,13 @@ knitr::opts_chunk$set(
 )
 ```
 
-# smeltr <img src="man/figures/logo.jpg" align="right" height="57" alt="" />
+# smeltr <a href="https://commons.wikimedia.org/wiki/File:Pond_smelt_illustration.jpg"><img src="man/figures/logo.jpg" align="right" height="57" alt="Surf_Smelt,_Pond_smelt.jpg: Drawing by H. L. Todd, NOAA&#039;s Historic Fisheries Collection derivative work: ManfromButtonwillow, Public domain, via Wikimedia Commons"/></a>
+
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of smeltr is to ...
+Read through amateurish spreadsheets and figure out how to tidy them.
 
 ## Installation
 
@@ -39,4 +40,3 @@ library(smeltr)
 ## basic example code
 dummy()
 ```
-
