removed snark from README and edited license to show Higher Expectations is the copyright holder

--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-Read through amateurish spreadsheets and figure out how to tidy them.
+Build algorithms for tidying spreadsheets with complicated layouts.
 
 ## Installation
 
